# ansisnap

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.ja.md  README.md  README.zh.md
docs/: snapshot-format.md
examples/: README.md  greet.sh  tui.sh
scripts/: smoke.sh
src/: cli.rs  differ.rs  lib.rs  main.rs  parser.rs  runner.rs  screen.rs  snapshot.rs  style.rs
tests/: cli.rs
